--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>My Webpage</title>
     </head>
     <body>
-        <h1> style ="color:blue;">Welcome to my website my version</h1>
+        <h1 style="color:blue;">Welcome to my website my version</h1>
             <h2>Hello again</h2>
         Hello, world that's my version!
     </body>
